# tweet-parser

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
font/: DajeVuSans.txt
src/tweets2pdf/: __main__.py  pdf.py  settings.py  tweet.py  twitter.py  utils.py
tests/: test_pdf.py  test_twitter.py
